@@ -14,186 +14,338 @@
  * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
  */
 
+/**
+ * @File: src/linux/proc.c
+ * @Author: Jorge Pereira <jpereira@freeradius.org>
+ */
+
 #include <errno.h>
-#include <err.h>
 #include <fcntl.h>
-#include <pthread.h>
+#include <limits.h>
 #include <signal.h>
-#include <stdlib.h>
 #include <stdio.h>
-#include <sys/queue.h>
-#include <sys/types.h>
-#include <sys/wait.h>
+#include <stdlib.h>
 #include <string.h>
 #include <unistd.h>
 
-#include <limits.h>
-#include <sys/inotify.h>
-#include <sys/epoll.h>
+#include <sys/socket.h>
+#include <sys/types.h>
+#include <sys/wait.h>
+
+#include <linux/cn_proc.h>
+#include <linux/connector.h>
+#include <linux/netlink.h>
 
 #include "sys/event.h"
 #include "private.h"
 
-
-/* XXX-FIXME Should only have one wait_thread per process.
-   Now, there is one thread per kqueue
+/**
+ *  EVFILT_PROC      Takes the process ID to monitor as the identifier and
+ *                   the events to watch for in fflags, and returns when the
+ *                   process performs one or more of the requested events.
+ *                   If a process can normally see another process, it can
+ *                   attach an event to it.  The events to monitor are:
+ *
+ *                   NOTE_EXIT    The process has exited.
+ *
+ *                   NOTE_EXITSTATUS
+ *                                The process has exited and its exit status
+ *                                is in filter specific data. Valid only on
+ *                                child processes and to be used along with
+ *                                NOTE_EXIT.
+ *
+ *                   NOTE_FORK    The process created a child process via
+ *                                fork(2) or similar call.
+ *
+ *                   NOTE_EXEC    The process executed a new process via
+ *                                execve(2) or similar call.
+ *
+ *                   NOTE_SIGNAL  The process was sent a signal. Status can
+ *                                be checked via waitpid(2) or similar call.
+ *
+ *                   NOTE_REAP    The process was reaped by the parent via
+ *                                wait(2) or similar call. Deprecated, use
+ *                                NOTE_EXIT.
+ *
+ *                   On return, fflags contains the events which triggered
+ *                   the filter.
  */
-struct evfilt_data {
-    pthread_t       wthr_id;
-    pthread_cond_t   wait_cond;
-    pthread_mutex_t  wait_mtx;
-};
 
-//FIXME: WANT: static void *
-void *
-wait_thread(void *arg)
-{
-    struct filter *filt = (struct filter *) arg;
-    uint64_t counter = 1;
-    const int options = WEXITED | WNOWAIT;
-    struct knote *kn;
-    siginfo_t si;
-    sigset_t sigmask;
+#ifndef NDEBUG
+static const char *
+proc_status_dump(pid_t pid, int status) {
+    static __thread char buf[128];
 
-    /* Block all signals */
-    sigfillset (&sigmask);
-    pthread_sigmask(SIG_BLOCK, &sigmask, NULL);
-
-    for (;;) {
-
-        /* Wait for a child process to exit(2) */
-        if (waitid(P_ALL, 0, &si, options) != 0) {
-            if (errno == ECHILD) {
-                dbg_puts("got ECHILD, waiting for wakeup condition");
-                pthread_mutex_lock(&filt->kf_data->wait_mtx);
-                pthread_cond_wait(&filt->kf_data->wait_cond, &filt->kf_data->wait_mtx);
-                pthread_mutex_unlock(&filt->kf_data->wait_mtx);
-                dbg_puts("awoken from ECHILD-induced sleep");
-                continue;
-            }
-
-            dbg_puts("waitid(2) returned");
-            if (errno == EINTR)
-                continue;
-            dbg_perror("waitid(2)");
-            break;
-        }
-
-        /* Scan the wait queue to see if anyone is interested */
-        kn = knote_lookup(filt, si.si_pid);
-        if (kn == NULL)
-            continue;
-
-        /* Create a proc_event */
-        if (si.si_code == CLD_EXITED) {
-            kn->kev.data = si.si_status;
-        } else if (si.si_code == CLD_KILLED) {
-            /* FIXME: probably not true on BSD */
-            /* FIXME: arbitrary non-zero number */
-            kn->kev.data = 254;
-        } else {
-            /* Should never happen. */
-            /* FIXME: arbitrary non-zero number */
-            kn->kev.data = 1;
-        }
-
-        knote_enqueue(filt, kn);
-
-        /* Indicate read(2) readiness */
-        if (write(filt->kf_pfd, &counter, sizeof(counter)) < 0) {
-            if (errno != EAGAIN) {
-                dbg_printf("write(2): %s", strerror(errno));
-                /* TODO: set filter error flag */
-                break;
-            }
-        }
+    if (WIFEXITED(status)) {
+         snprintf(buf, sizeof(buf), "Process %d exited with status %d.", pid, WEXITSTATUS(status));
+    } else if (WIFSIGNALED(status)) {
+         snprintf(buf, sizeof(buf), "Process %d killed by signal %d.", pid, WTERMSIG(status));
+    } else {
+         snprintf(buf, sizeof(buf), "Process %d terminated.", pid);
     }
 
-    /* TODO: error handling */
-
-    return (NULL);
+    return buf;
 }
 
-int
-evfilt_proc_init(struct filter *filt)
-{
-#if FIXME
-    struct evfilt_data *ed;
-    int efd = -1;
+static const char *
+nl_proc_event_dump(struct proc_event *pe) {
+    static __thread char buf[256];
 
-    if ((ed = calloc(1, sizeof(*ed))) == NULL)
-        return (-1);
-    filt->kf_data = ed;
+    assert(pe != NULL);
 
-    pthread_mutex_init(&ed->wait_mtx, NULL);
-    pthread_cond_init(&ed->wait_cond, NULL);
-    if ((efd = eventfd(0, 0)) < 0)
-        goto errout;
-    if (fcntl(filt->kf_pfd, F_SETFL, O_NONBLOCK) < 0)
-        goto errout;
-    filt->kf_pfd = efd;
-    if (pthread_create(&ed->wthr_id, NULL, wait_thread, filt) != 0)
-        goto errout;
+    switch (pe->what) {
+        case PROC_EVENT_NONE:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_NONE { NULL }", pe);
+            break;
+        case PROC_EVENT_FORK:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_FORK { parent tid=%d pid=%d -> child tid=%d pid=%d }",
+                    pe,
+                    pe->event_data.fork.parent_pid,
+                    pe->event_data.fork.parent_tgid,
+                    pe->event_data.fork.child_pid,
+                    pe->event_data.fork.child_tgid);
+            break;
+        case PROC_EVENT_EXEC:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_EXEC { tid=%d pid=%d }",
+                    pe,
+                    pe->event_data.exec.process_pid,
+                    pe->event_data.exec.process_tgid);
+            break;
+        case PROC_EVENT_UID:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_UID { tid=%d pid=%d from %d to %d }",
+                    pe,
+                    pe->event_data.id.process_pid,
+                    pe->event_data.id.process_tgid,
+                    pe->event_data.id.r.ruid,
+                    pe->event_data.id.e.euid);
+            break;
+        case PROC_EVENT_GID:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_GID { change: tid=%d pid=%d from %d to %d }",
+                    pe,
+                    pe->event_data.id.process_pid,
+                    pe->event_data.id.process_tgid,
+                    pe->event_data.id.r.rgid,
+                    pe->event_data.id.e.egid);
+            break;
+        case PROC_EVENT_EXIT:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_EXIT { pid=%d tgid=%d exit_code=%d, exit_signal=%d, parent_pid=%d, parent_tgid=%d }",
+                    pe,
+                    pe->event_data.exit.process_pid,
+                    pe->event_data.exit.process_tgid,
+                    pe->event_data.exit.exit_code,
+                    pe->event_data.exit.exit_signal,
+                    pe->event_data.exit.parent_pid,
+                    pe->event_data.exit.parent_tgid);
+            break;
+        case PROC_EVENT_COMM:
+            snprintf(buf, sizeof(buf), "proc_event=%p: PROC_EVENT_COMM { pid=%d tgid=%d }",
+                    pe,
+                    pe->event_data.comm.process_pid,
+                    pe->event_data.comm.process_tgid);
+            break;
+        default:
+            snprintf(buf, sizeof(buf), "proc_event=%p: unhandled proc event: %d", pe, pe->what);
+            break;
+    }
 
-
-    return (0);
-
-errout:
-    if (efd >= 0)
-        close(efd);
-    free(ed);
-    close(filt->kf_pfd);
-    return (-1);
+    return buf;
+}
+#else
+#define nl_proc_event_dump(pe)
+#define proc_status_dump(pid, status)
 #endif
-    return (-1); /*STUB*/
+
+/* Check if is a valid PID */
+static bool
+pid_is_exist(pid_t pid)
+{
+    return (kill(pid, 0) == 0);
 }
 
-void
-evfilt_proc_destroy(struct filter *filt)
+static int
+nl_connect()
 {
-//TODO:    pthread_cancel(filt->kf_data->wthr_id);
-    close(filt->kf_pfd);
+    int nl_sock;
+    struct sockaddr_nl sa_nl = {
+        .nl_family = AF_NETLINK,
+        .nl_groups = CN_IDX_PROC,
+        .nl_pid = getpid()
+    };
+
+    nl_sock = socket(PF_NETLINK, SOCK_DGRAM, NETLINK_CONNECTOR);
+    if (nl_sock == -1) {
+        dbg_perror("netlink socket(2)");
+        return -1;
+    }
+
+    if (fcntl(nl_sock, F_SETFL, fcntl(nl_sock, F_GETFL) | O_NONBLOCK) < 0) {
+        dbg_perror("netlink fcntl(2)");
+    error:
+        close(nl_sock);
+        return -1;
+    }
+
+    if (bind(nl_sock, (struct sockaddr *)&sa_nl, sizeof(sa_nl)) < 0) {
+        dbg_perror("netlink bind(2)");
+        goto error;
+    }
+
+    return nl_sock;
+}
+
+static int
+nl_set_listen(int nl_sock)
+{
+    struct __attribute__ ((aligned(NLMSG_ALIGNTO))) {
+        struct nlmsghdr nl_hdr;
+        struct __attribute__ ((__packed__)) {
+            struct cn_msg cn_msg;
+            enum proc_cn_mcast_op cn_mcast;
+        };
+    } nlcn_msg = {
+        .nl_hdr.nlmsg_len = sizeof(nlcn_msg),
+        .nl_hdr.nlmsg_pid = getpid(),
+        .nl_hdr.nlmsg_type = NLMSG_DONE,
+        .nl_hdr.nlmsg_flags = 0,
+        .nl_hdr.nlmsg_seq = 0,
+
+        .cn_msg.id.idx = CN_IDX_PROC,
+        .cn_msg.id.val = CN_VAL_PROC,
+        .cn_msg.seq = 0,
+        .cn_msg.ack = 0,
+        .cn_msg.len = sizeof(enum proc_cn_mcast_op),
+
+        .cn_mcast = PROC_CN_MCAST_LISTEN
+    };
+
+    if (send(nl_sock, &nlcn_msg, sizeof(nlcn_msg), 0) < 0) {
+        dbg_perror("netlink send(2)");
+        return -1;
+    }
+
+    return 0;
+}
+
+static sig_atomic_t __thread need_exit = false;
+
+static void
+on_sigint(UNUSED int unused)
+{
+    need_exit = true;
 }
 
 int
-evfilt_proc_copyout(struct filter *filt,
-            struct kevent *dst,
-            int maxevents)
+evfilt_proc_copyout(struct kevent *dst, struct knote *src, void *ptr)
 {
-    struct knote *kn;
+    struct epoll_event *const ev = (struct epoll_event *) ptr;
+    struct {
+        struct nlmsghdr nl_hdr;
+        struct __attribute__ ((__packed__)) {
+            struct cn_msg cn_msg;
+            struct proc_event proc_ev;
+        };
+    } nlcn_msg;
+    pid_t pid = (pid_t)src->kev.ident;
     int nevents = 0;
-    uint64_t cur;
 
-    /* Reset the counter */
-    if (read(filt->kf_pfd, &cur, sizeof(cur)) < sizeof(cur)) {
-        dbg_printf("read(2): %s", strerror(errno));
-        return (-1);
-    }
-    dbg_printf("  counter=%llu", (unsigned long long) cur);
+    signal(SIGINT, &on_sigint);
+    siginterrupt(SIGINT, true);
 
-    for (kn = knote_dequeue(filt); kn != NULL; kn = knote_dequeue(filt)) {
-        kevent_dump(&kn->kev);
-        memcpy(dst, &kn->kev, sizeof(*dst));
+    dbg_printf("procfd=%d pid=%d epoll_event=%s", src->kdata.kn_procfd, pid, epoll_event_dump(ev));
 
-        if (kn->kev.flags & EV_DISPATCH) {
-            KNOTE_DISABLE(kn);
+    memcpy(dst, &src->kev, sizeof(*dst));
+    dst->data = 0;
+    dst->fflags = 0;
+
+    while (!need_exit) {
+        int rc;
+
+        memset(&nlcn_msg, 0, sizeof(nlcn_msg));
+
+        /* Let's avoid look for something that no longer exist */
+        if (!pid_is_exist(pid)) {
+            dbg_printf("pid=%d (No such process)", pid);
+            return (0);
         }
-        if (kn->kev.flags & EV_ONESHOT) {
-            knote_delete(filt, kn);
-        } else {
-            kn->kev.data = 0; //why??
+
+        rc = recv(src->kdata.kn_procfd, &nlcn_msg, sizeof(nlcn_msg), 0);
+        if (rc == 0) {  /* shutdown? */
+            dbg_printf("netlink recv: shutdown");
+            return (0);
+        } else if (rc < 0) {
+            if (errno == EAGAIN || errno == EWOULDBLOCK) {
+                /* It's not *really* ready for recv; wait until it is. */
+                continue;
+            }
+
+            dbg_perror("netlink recv");
+            return (-1);
         }
 
+        if (nlcn_msg.proc_ev.what == PROC_EVENT_NONE) {
+            continue;
+        }
 
-        if (++nevents > maxevents)
+        /**
+         * Just to shut up the compiler warnings about
+         * copy & assigment among __packed__ variables.
+         */
+        void *_pe = &nlcn_msg.proc_ev;
+        struct proc_event *pe = _pe;
+
+        /**
+         * The nl_proc_event_dump() is very verbose.
+         * Only useful to enable during troubleshooting.
+         */
+#if 0
+        dbg_printf("%s", nl_proc_event_dump(pe));
+#endif
+
+        if (src->kev.fflags & NOTE_FORK) {
+            if (!(pe->what == PROC_EVENT_FORK && pe->event_data.fork.parent_pid == pid)) {
+                continue;
+            }
+
+            dst->fflags |= NOTE_FORK;
+            dbg_printf("proc_event=%p: Process %d forked -> child { pid=%d, tgid=%d }",
+                pe, pid, pe->event_data.fork.child_pid, pe->event_data.fork.child_tgid);
+            nevents++;
             break;
-        dst++;
-    }
+        } else if (src->kev.fflags & NOTE_EXEC) {
+            if (!(pe->what == PROC_EVENT_EXEC && pe->event_data.exec.process_pid == pid)) {
+                continue;
+            }
 
-    if (knote_events_pending(filt)) {
-    /* XXX-FIXME: If there are leftover events on the waitq,
-       re-arm the eventfd. list */
-        abort();
+            dst->fflags |= NOTE_EXEC;
+            dbg_printf("proc_event=%p: Process %d executed the process { pid=%d, tgid=%d }",
+                pe, pid, pe->event_data.exec.process_pid, pe->event_data.exec.process_tgid);
+            nevents++;
+            break;
+        } else if (src->kev.fflags & (NOTE_EXIT | NOTE_EXITSTATUS | NOTE_SIGNAL)) {
+            int exit_code;
+
+            if (!(pe->what == PROC_EVENT_EXIT && pe->event_data.exit.process_pid == pid)) {
+                continue;
+            }
+
+            dst->fflags |= NOTE_EXIT;
+            exit_code = pe->event_data.exit.exit_code;
+
+            if ((src->kev.fflags & NOTE_EXITSTATUS) && WIFEXITED(exit_code)) {
+                dst->data = WEXITSTATUS(exit_code);
+                dst->fflags |= NOTE_EXITSTATUS;
+            } else if ((src->kev.fflags & NOTE_SIGNAL) && WIFSIGNALED(exit_code)) {
+                dst->data = WTERMSIG(exit_code);
+                dst->fflags |= NOTE_SIGNAL;
+            }
+
+            dbg_printf("proc_event=%p: %s", pe, proc_status_dump(pid, exit_code));
+            nevents++;
+            break;
+        } else {
+            dbg_printf("proc_event=%p: Error: Unknown fflags=%#x", pe, src->kev.fflags);
+            return (-1);
+        }
     }
 
     return (nevents);
@@ -202,12 +354,50 @@ evfilt_proc_copyout(struct filter *filt,
 int
 evfilt_proc_knote_create(struct filter *filt, struct knote *kn)
 {
-    return (0); /* STUB */
+    pid_t pid = (pid_t)kn->kev.ident;
+    int nl_fd;
+    int events;
+
+    kn->kdata.kn_procfd = -1;
+
+    if (!pid_is_exist(pid)) {
+        dbg_printf("pid=%d (No such process)", pid);
+        return -1;
+    }
+
+    if ((nl_fd = nl_connect()) < 0) {
+        dbg_perror("fd_used=%u fd_max=%u nl_connect()", get_fd_used(), get_fd_limit());
+        return (-1);
+    }
+
+    dbg_printf("epollfd=%d pid=%d nl_fd=%d created", filter_epoll_fd(filt), pid, nl_fd);
+
+    if (nl_set_listen(nl_fd) < 0) {
+        dbg_perror("fd_used=%u fd_max=%u nl_set_listen()", get_fd_used(), get_fd_limit());
+    error:
+        (void)close(nl_fd);
+        return (-1);
+    }
+
+    events = (EPOLLIN | EPOLLET | EPOLLRDHUP);
+    if (kn->kev.flags & (EV_ONESHOT | EV_DISPATCH)) {
+        events |= EPOLLONESHOT;
+    }
+    kn->kdata.kn_procfd = nl_fd;
+
+    KN_UDATA(kn);   /* populate this knote's kn_udata field */
+
+    /* Add the NetLink fd to the kqueue's epoll descriptor set */
+    if (epoll_ctl(filter_epoll_fd(filt), EPOLL_CTL_ADD, nl_fd, EPOLL_EV_KN(events, kn)) < 0) {
+        dbg_perror("epoll_ctl(2)");
+        goto error;
+    }
+
+    return (0);
 }
 
 int
-evfilt_proc_knote_modify(struct filter *filt, struct knote *kn,
-        const struct kevent *kev)
+evfilt_proc_knote_modify(UNUSED struct filter *filt, UNUSED struct knote *kn, UNUSED const struct kevent *kev)
 {
     return (0); /* STUB */
 }
@@ -215,23 +405,40 @@ evfilt_proc_knote_modify(struct filter *filt, struct knote *kn,
 int
 evfilt_proc_knote_delete(struct filter *filt, struct knote *kn)
 {
-    return (0); /* STUB */
+    int pid = (pid_t)kn->kev.ident;
+    int nl_fd = kn->kdata.kn_procfd;
+
+    dbg_printf("epollfd=%d pid=%d nl_fd=%d", filter_epoll_fd(filt), pid, nl_fd);
+
+    if (nl_fd < 0) {
+        return (0);
+    }
+
+    if (epoll_ctl(filter_epoll_fd(filt), EPOLL_CTL_DEL, nl_fd, NULL) < 0) {
+        dbg_perror("epoll_ctl(2)");
+        return (-1);
+    }
+
+    (void) close(nl_fd);
+    kn->kdata.kn_procfd = -1;
+
+    return (0);
 }
 
 int
-evfilt_proc_knote_enable(struct filter *filt, struct knote *kn)
+evfilt_proc_knote_enable(UNUSED struct filter *filt, UNUSED struct knote *kn)
 {
     return (0); /* STUB */
 }
 
 int
-evfilt_proc_knote_disable(struct filter *filt, struct knote *kn)
+evfilt_proc_knote_disable(UNUSED struct filter *filt, UNUSED struct knote *kn)
 {
     return (0); /* STUB */
 }
 
-const struct filter evfilt_proc_DEADWOOD = {
-    .kf_id      = 0,  //XXX-FIXME broken: EVFILT_PROC,
+const struct filter evfilt_proc = {
+    .kf_id      = EVFILT_PROC,
     .kf_copyout = evfilt_proc_copyout,
     .kn_create  = evfilt_proc_knote_create,
     .kn_modify  = evfilt_proc_knote_modify,
